--- a/src/app/layout/company/company-edit/company-edit.component.html
+++ b/src/app/layout/company/company-edit/company-edit.component.html
@@ -1,79 +1,128 @@
 <div>
-    <app-page-header [heading]="'Edit Company'" [icon]="'fa fa-university'"></app-page-header>
-    <div>
-      <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-          <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-          <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-          <button type="button" class="btn btn-success" (click)="btnClickNav('company')"><i class="fa fa-arrow-left"></i> Back</button>
-      </div>
-      <div class="clearfix"></div>
+    <!-- <app-page-header [heading]="'Edit Company'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+        <div class="col-md-6">
+            <h4 class="page-header">Edit Company</h4>
+        </div>
+        <div class="col-md-6 pull-right" style="text-align: right">
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-refresh"></i> Reload</button>
+            <button type="button" class="btn btn-success" (click)="btnClickNav('company')">
+                <i class="fa fa-arrow-left"></i> Back</button>
+        </div>
+        <div class="clearfix"></div>
     </div>
     <hr/>
 
     <div>
         <div class="row">
-          <div class="col-md-12">
-              <form role="form">
-                <div class="card bg-light mb-3">
-                    <div class="card-header" style="background-color:#868e96; color: #fff;">Company Edit</div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="form-group col-md-12">
-                                <label>Company Name</label>
-                                <input class="form-control" [(ngModel)]="company.company_name" name="company_name" placeholder="Name">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Website</label>
-                                <input class="form-control" [(ngModel)]="company.company_url" name="company_url" placeholder="Website">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Email</label>
-                                <input class="form-control" [(ngModel)]="company.company_email" name="company_email" placeholder="Email">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Phone</label>
-                                <input class="form-control" [(ngModel)]="company.company_contact" name="company_contact" placeholder="Phone">
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label>Company Address</label>
-                                <textarea class="form-control" [(ngModel)]="company.company_address" name="company_address" rows="3" placeholder="Company Address">{{company.company_address}}</textarea>
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>State</label>
-                                <select class="form-control"  [(ngModel)]="company.company_state" name="company_state">
-                                    <option value="0">Select State</option>
-                                    <option *ngFor="let state of stateList ;" value="{{state.id}}">{{state.state_name}}</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>City</label>
-                                <input class="form-control" placeholder="City Name" [(ngModel)]="company.company_city" name="company_city">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>Pin</label>
-                                <input class="form-control" placeholder="Pin" [(ngModel)]="company.company_pin" name="company_pin">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>GSTIN</label>
-                                <input class="form-control" placeholder="GSTIN" [(ngModel)]="company.company_gst" name="company_gst">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>PAN</label>
-                                <input class="form-control" placeholder="PAN" [(ngModel)]="company.company_pan" name="company_pan">
-                            </div>
-                            <div class="form-group col-md-4">
-                                <label>CIN</label>
-                                <input class="form-control" placeholder="CIN" [(ngModel)]="company.company_cin" name="company_cin">
-                            </div>
-                            <div class="form-group col-md-12" style="text-align: right">
-                            <button type="submit" class="btn btn-success" (click)="updateCompany()">Submit</button>
-                            <button type="reset" class="btn btn-secondary">Reset</button>
+            <div class="col-md-12">
+                <form role="form" [formGroup]="form">
+                    <div class="card bg-light mb-3">
+                        <div class="card-header" style="background-color:#868e96; color: #fff;">Company Edit</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="form-group col-md-12">
+                                    <label>Company Name</label>
+                                    <input type="text" class="form-control" [(ngModel)]="company.company_name" name="company_name" placeholder="Name" formControlName="company_name"
+                                        [ngClass]="displayFieldCss('company_name')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_name')">
+                                        Please enter company name
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Website</label>
+                                    <input type="text" class="form-control" [(ngModel)]="company.company_url" name="company_url" placeholder="Website" formControlName="company_url"
+                                        [ngClass]="displayFieldCss('company_url')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_url')">
+                                        Please enter website
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Email</label>
+                                    <input type="email" class="form-control" [(ngModel)]="company.company_email" name="company_email" placeholder="Email" formControlName="company_email"
+                                        [ngClass]="displayFieldCss('company_email')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_email')">
+                                        Please enter email
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Phone</label>
+                                    <input type="number" class="form-control" [(ngModel)]="company.company_contact" name="company_contact" placeholder="Phone"
+                                        formControlName="company_contact" [ngClass]="displayFieldCss('company_contact')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_contact')">
+                                        Please enter phone
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-12">
+                                    <label>Company Address</label>
+                                    <textarea class="form-control" [(ngModel)]="company.company_address" name="company_address" rows="3" placeholder="Company Address"
+                                        formControlName="company_address" [ngClass]="displayFieldCss('company_address')">{{company.company_address}}</textarea>
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_address')">
+                                        Please enter address
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>State</label>
+                                    <select class="form-control" [(ngModel)]="company.company_state" name="company_state" formControlName="company_state" [ngClass]="displayFieldCss('company_state')">
+                                        <option value="0">Select State</option>
+                                        <option *ngFor="let state of stateList ;" value="{{state.id}}">{{state.state_name}}</option>
+                                    </select>
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_state')">
+                                        Please select state
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>City</label>
+                                    <input type="text" class="form-control" placeholder="City Name" [(ngModel)]="company.company_city" name="company_city" formControlName="company_city"
+                                        [ngClass]="displayFieldCss('company_city')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_city')">
+                                        Please enter city
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>Pin</label>
+                                    <input type="text" class="form-control" placeholder="Pin" [(ngModel)]="company.company_pin" name="company_pin" formControlName="company_pin"
+                                        [ngClass]="displayFieldCss('company_pin')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_pin')">
+                                        Please enter pin
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>GSTIN</label>
+                                    <input type="number" class="form-control" placeholder="GSTIN" [(ngModel)]="company.company_gst" name="company_gst" formControlName="company_gst"
+                                        [ngClass]="displayFieldCss('company_gst')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_gst')">
+                                        Please enter GSTN
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>PAN</label>
+                                    <input type="text" class="form-control" placeholder="PAN" [(ngModel)]="company.company_pan" name="company_pan" formControlName="company_pan"
+                                        [ngClass]="displayFieldCss('company_pan')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_pan')">
+                                        Please enter PAN
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label>CIN</label>
+                                    <input type="text" class="form-control" placeholder="CIN" [(ngModel)]="company.company_cin" name="company_cin" formControlName="company_cin"
+                                        [ngClass]="displayFieldCss('company_cin')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_cin')">
+                                        Please enter CIN
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-12" style="text-align: right">
+                                    <button type="submit" class="btn btn-success" (click)="updateCompany()">Submit</button>
+                                    <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-              </form>
-          </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
