--- a/src/app/layout/company/company-add/company-add.component.html
+++ b/src/app/layout/company/company-add/company-add.component.html
@@ -19,7 +19,7 @@
     <div>
         <div class="row">
             <div class="col-md-12">
-                <form role="form" [formGroup]="form">
+                <form role="form" [formGroup]="form" novalidate>
                     <div class="card bg-light mb-3">
                         <div class="card-header" style="background-color:#868e96; color: #fff;">Company Add</div>
                         <div class="card-body">
@@ -30,35 +30,47 @@
                                         <option value="">Select Mother company</option>
                                         <option *ngFor="let motherCompany of companyList ;" value="{{motherCompany.id}}">{{motherCompany.company_name}}</option>
                                     </select>
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('parent')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['parent'].hasError('required')">
                                         Please select mother company
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label>Company Name</label>
                                     <input type="text" class="form-control" name="company_name" placeholder="Name" formControlName="company_name" [ngClass]="displayFieldCss('company_name')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_name')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_name'].hasError('required')">
                                         Please enter company name
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Website</label>
                                     <input type="text" class="form-control" name="company_url" placeholder="Website" formControlName="company_url" [ngClass]="displayFieldCss('company_url')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_url')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_url'].hasError('pattern') && !form.controls['company_url'].hasError('required')">
+                                        Please enter a valid website
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_url'].hasError('required')">
                                         Please enter website
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Email</label>
                                     <input type="email" class="form-control" name="company_email" placeholder="Email" formControlName="company_email" [ngClass]="displayFieldCss('company_email')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_email')">
-                                        Please enter email
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_email'].hasError('pattern') && !form.controls['company_email'].hasError('required')">
+                                        Please enter a valid email address
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_email'].hasError('required')">
+                                        Email is required
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Phone</label>
-                                    <input type="number" class="form-control" name="company_contact" placeholder="Phone" formControlName="company_contact" [ngClass]="displayFieldCss('company_contact')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_contact')">
+                                    <input type="text" class="form-control" name="company_contact" placeholder="Phone" formControlName="company_contact" [ngClass]="displayFieldCss('company_contact')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('minlength') && !form.controls['company_contact'].hasError('required')">
+                                        Please enter at least 10 digit
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('maxlength') && !form.controls['company_contact'].hasError('required')">
+                                        Phone number should be less then 13 digit
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('required')">
                                         Please enter phone
                                     </div>
                                 </div>
@@ -66,7 +78,7 @@
                                     <label>Company Address</label>
                                     <textarea class="form-control" rows="3" placeholder="Company Address" name="company_address" formControlName="company_address"
                                         [ngClass]="displayFieldCss('company_address')"></textarea>
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_address')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_address'].hasError('required')">
                                         Please enter address
                                     </div>
                                 </div>
@@ -76,35 +88,35 @@
                                         <option value="">Select State</option>
                                         <option *ngFor="let state of stateList ;" value="{{state.id}}">{{state.state_name}}</option>
                                     </select>
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_state')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_state'].hasError('required')">
                                         Please select state
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>City</label>
                                     <input type="text" class="form-control" placeholder="City Name" name="company_city" formControlName="company_city" [ngClass]="displayFieldCss('company_city')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_city')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_city'].hasError('required')">
                                         Please enter city
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Pin</label>
                                     <input type="text" class="form-control" placeholder="Pin" name="company_pin" formControlName="company_pin" [ngClass]="displayFieldCss('company_pin')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_pin')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_pin'].hasError('required')">
                                         Please enter pin
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>GSTIN</label>
                                     <input type="number" class="form-control" placeholder="GSTIN" name="company_gst" formControlName="company_gst" [ngClass]="displayFieldCss('company_gst')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_gst')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_gst'].hasError('required')">
                                         Please enter GSTN
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>PAN</label>
                                     <input type="text" class="form-control" placeholder="PAN" name="company_pan" formControlName="company_pan" [ngClass]="displayFieldCss('company_pan')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_pan')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_pan'].hasError('required')">
                                         Please enter PAN
                                     </div>
                                 </div>
@@ -112,7 +124,7 @@
                                     <label>CIN</label>
                                     <input type="text" class="form-control" placeholder="CIN" placeholder="CIN" name="company_cin" formControlName="company_cin"
                                         [ngClass]="displayFieldCss('company_cin')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_cin')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_cin'].hasError('required')">
                                         Please enter CIN
                                     </div>
                                 </div>
