--- a/src/app/layout/company/company-edit/company-edit.component.html
+++ b/src/app/layout/company/company-edit/company-edit.component.html
@@ -28,7 +28,7 @@
                                     <label>Company Name</label>
                                     <input type="text" class="form-control" [(ngModel)]="company.company_name" name="company_name" placeholder="Name" formControlName="company_name"
                                         [ngClass]="displayFieldCss('company_name')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_name')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_name'].hasError('required')">
                                         Please enter company name
                                     </div>
                                 </div>
@@ -36,27 +36,35 @@
                                     <label>Website</label>
                                     <input type="text" class="form-control" [(ngModel)]="company.company_url" name="company_url" placeholder="Website" formControlName="company_url"
                                         [ngClass]="displayFieldCss('company_url')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_url')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_url'].hasError('pattern') && !form.controls['company_url'].hasError('required')">
+                                        Please enter a valid website
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_url'].hasError('required')">
                                         Please enter website
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Email</label>
                                     <input type="email" class="form-control" [(ngModel)]="company.company_email" name="company_email" placeholder="Email" formControlName="company_email"
-                                    [ngClass]="{
-                                        'is-invalid': company_email.invalid && (company_email.dirty || company_email.touched),
-                                        'is-valid': company_email.valid && (company_email.dirty || company_email.touched)
-                                   }">
-                                    <div class="invalid-feedback"*ngIf="company_email.errors && (company_email.dirty || company_email.touched)">
-                                            <p *ngIf="company_email.errors.required">Email is required</p>
-                                            <p *ngIf="company_email.errors.pattern">The email address must contain at least the @ character</p>
+                                        [ngClass]="displayFieldCss('company_email')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_email'].hasError('pattern') && !form.controls['company_email'].hasError('required')">
+                                        Please enter a valid email address
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_email'].hasError('required')">
+                                        Email is required
                                     </div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Phone</label>
-                                    <input type="number" class="form-control" [(ngModel)]="company.company_contact" name="company_contact" placeholder="Phone"
+                                    <input type="text" class="form-control" [(ngModel)]="company.company_contact" name="company_contact" placeholder="Phone"
                                         formControlName="company_contact" [ngClass]="displayFieldCss('company_contact')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_contact')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('minlength') && !form.controls['company_contact'].hasError('required')">
+                                        Please enter at least 10 digit
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('maxlength') && !form.controls['company_contact'].hasError('required')">
+                                        Phone number should be less then 13 digit
+                                    </div>
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_contact'].hasError('required')">
                                         Please enter phone
                                     </div>
                                 </div>
@@ -64,7 +72,7 @@
                                     <label>Company Address</label>
                                     <textarea class="form-control" [(ngModel)]="company.company_address" name="company_address" rows="3" placeholder="Company Address"
                                         formControlName="company_address" [ngClass]="displayFieldCss('company_address')">{{company.company_address}}</textarea>
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_address')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_address'].hasError('required')">
                                         Please enter address
                                     </div>
                                 </div>
@@ -74,7 +82,7 @@
                                         <option value="0">Select State</option>
                                         <option *ngFor="let state of stateList ;" value="{{state.id}}">{{state.state_name}}</option>
                                     </select>
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_state')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_state'].hasError('required')">
                                         Please select state
                                     </div>
                                 </div>
@@ -82,7 +90,7 @@
                                     <label>City</label>
                                     <input type="text" class="form-control" placeholder="City Name" [(ngModel)]="company.company_city" name="company_city" formControlName="company_city"
                                         [ngClass]="displayFieldCss('company_city')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_city')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_city'].hasError('required')">
                                         Please enter city
                                     </div>
                                 </div>
@@ -90,7 +98,7 @@
                                     <label>Pin</label>
                                     <input type="text" class="form-control" placeholder="Pin" [(ngModel)]="company.company_pin" name="company_pin" formControlName="company_pin"
                                         [ngClass]="displayFieldCss('company_pin')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_pin')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_pin'].hasError('required')">
                                         Please enter pin
                                     </div>
                                 </div>
@@ -98,7 +106,7 @@
                                     <label>GSTIN</label>
                                     <input type="number" class="form-control" placeholder="GSTIN" [(ngModel)]="company.company_gst" name="company_gst" formControlName="company_gst"
                                         [ngClass]="displayFieldCss('company_gst')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_gst')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_gst'].hasError('required')">
                                         Please enter GSTN
                                     </div>
                                 </div>
@@ -106,7 +114,7 @@
                                     <label>PAN</label>
                                     <input type="text" class="form-control" placeholder="PAN" [(ngModel)]="company.company_pan" name="company_pan" formControlName="company_pan"
                                         [ngClass]="displayFieldCss('company_pan')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_pan')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_pan'].hasError('required')">
                                         Please enter PAN
                                     </div>
                                 </div>
@@ -114,7 +122,7 @@
                                     <label>CIN</label>
                                     <input type="text" class="form-control" placeholder="CIN" [(ngModel)]="company.company_cin" name="company_cin" formControlName="company_cin"
                                         [ngClass]="displayFieldCss('company_cin')">
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('company_cin')">
+                                    <div class="invalid-feedback" *ngIf="form.controls['company_cin'].hasError('required')">
                                         Please enter CIN
                                     </div>
                                 </div>
