--- a/src/app/layout/material/material-add/material-add.component.html
+++ b/src/app/layout/material/material-add/material-add.component.html
@@ -15,22 +15,38 @@
     <div>
         <div class="row">
           <div class="col-md-12">
-              <form role="form">
+              <form role="form" [formGroup]="form" novalidate>
                 <div class="card bg-light mb-3">
                     <div class="card-header" style="background-color:#868e96; color: #fff;">Material Add</div>
                     <div class="card-body">
                         <div class="row">
                             <div class="form-group col-md-6">
                               <label>Material Type</label>
-                                <select class="form-control"  [(ngModel)]="material.material_type" name="material_type">
-                                    <option value="0">Select Material Type</option>
+                                <select class="form-control" formControlName="material_type" [ngClass]="displayFieldCss('material_type')">
+                                    <option value="">Select Material Type</option>
                                     <option *ngFor="let materialType of materialTypeList;" value="{{materialType.id}}">{{materialType.material_type}}</option>
                                 </select>
+                                <div class="invalid-feedback" *ngIf="form.controls['material_type'].hasError('required')">
+                                    Please select Material Type
+                                </div>
                             </div>
                             <div class="form-group col-md-6">
                                 <label>Material Name</label>
-                                <input class="form-control" [(ngModel)]="material.material_name" name="material_name" placeholder="Material Name">
+                                <input class="form-control" formControlName="material_fullname" [ngClass]="displayFieldCss('material_fullname')" placeholder="Material Name">
+                                <div class="invalid-feedback" *ngIf="form.controls['material_fullname'].hasError('required')">
+                                    Please enter material name
+                                </div>
                             </div>
+
+                            <div class="form-group col-md-12">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" value="" [(ngModel)]="material.is_sale" name="is_sale" > For Sale Material
+                                    </label>
+                                </div>
+                            </div>
+                        <!--
+                            
                             <div class="form-group col-md-4">
                                 <label>Unit of Measurement</label>
                                 <select class="form-control"  [(ngModel)]="material.base_uom" name="base_uom">
@@ -138,7 +154,7 @@
                                 <label>Description</label>
                                 <textarea class="form-control" rows="2" placeholder="Description" [(ngModel)]="material.description" name="description">{{material.description}}</textarea>
                             </div>
-
+                        -->
                             <div class="form-group col-md-12" style="text-align: right">
                                 <button type="submit" class="btn btn-success" (click)="addMaterial()">Submit</button>
                                 <button type="reset" class="btn btn-secondary">Reset</button>
