--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -102,7 +102,7 @@
                     <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/gst-rates']">
                         <i class="fa fa-line-chart" aria-hidden="true"></i> GST Rates
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/vendor']">
                         <i class="fa fa-user-circle-o" aria-hidden="true"></i> Vendors
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/terms-condition']">
