Purchase Requisition section update

--- a/src/app/layout/company/storage-location-list/storage-location-list.component.html
+++ b/src/app/layout/company/storage-location-list/storage-location-list.component.html
@@ -7,7 +7,7 @@
         <button type="button" class="btn btn-secondary">
           <i class="fa fa-refresh"></i> Reload</button>
         <button type="button" class="btn btn-success" (click)="showStorageAdd()">
-          <i class="fa fa-plus"></i> New Branch</button>
+          <i class="fa fa-plus"></i> New Storage Location</button>
       </div>
       <div class="clearfix"></div>
     </div>
