--- a/src/app/layout/material/material-edit/material-edit.component.html
+++ b/src/app/layout/material/material-edit/material-edit.component.html
@@ -156,7 +156,7 @@
     
                                     <div class="form-group col-md-6">
                                         <label>Purchase Org: </label>
-                                        <select multiple="" class="form-control" formControlName="material_purchase_org" [ngClass]="displayFieldCss('material_purchase_org')">
+                                        <select multiple="" class="form-control" formControlName="material_purchase_org" [ngClass]="displayFieldCss('material_purchase_org')" [(ngModel)]="material.material_purchase_org" name="material_purchase_org">
                                             <option *ngFor="let purchaseOrganization of purchaseOrganizationList" value={{purchaseOrganization.id}}>{{purchaseOrganization.name}} </option>
                                         </select>
                                         <div class="invalid-feedback" *ngIf="form.controls['material_purchase_org'].hasError('required')">
@@ -166,7 +166,8 @@
     
                                     <div class="form-group col-md-6">
                                         <label>Purchase Group: </label>
-                                        <select multiple="" class="form-control" formControlName="material_purchase_grp" [ngClass]="displayFieldCss('material_purchase_grp')">
+                                        
+                                        <select multiple="" class="form-control" formControlName="material_purchase_grp" [ngClass]="displayFieldCss('material_purchase_grp')" [(ngModel)]="material.material_purchase_grp" name="material_purchase_grp">
                                             <option *ngFor="let purchaseGroup of purchaseGroupList;" value={{purchaseGroup.id}}>{{purchaseGroup.name}} </option>
                                         </select>
                                         <div class="invalid-feedback" *ngIf="form.controls['material_purchase_grp'].hasError('required')">
@@ -183,7 +184,7 @@
                                     </div>
                                     
                                     <div class="form-group col-md-12" style="text-align: right">
-                                        <button type="submit" class="btn btn-success" (click)="addMaterial()">Submit</button>
+                                        <button type="submit" class="btn btn-success" (click)="updateMaterial()">Submit</button>
                                         <button type="reset" class="btn btn-secondary">Reset</button>
                                     </div>
                                 </div>
