--- a/src/app/layout/purchase-requisition/purchase-requisition-add/purchase-requisition-add.component.html
+++ b/src/app/layout/purchase-requisition/purchase-requisition-add/purchase-requisition-add.component.html
@@ -28,31 +28,29 @@
                                     <div class="row">
                                         <div class="form-group col-md-3">
                                             <label>Purchase Organization</label>
-                                            <select class="form-control" name="purchase_organization" formControlName="purchase_organization" [ngClass]="displayFieldCss('purchase_organization')">
-                                                <option value="">Select Organization</option>
-                                                <option>Testorg</option>
+                                            <select class="form-control" formControlName="purchase_org" [ngClass]="displayFieldCss('purchase_org')" [(ngModel)]="purchaseRequisition.purchase_organization" name="purchase_organization" (ngModelChange)="changePurchaseOrganization(purchaseRequisition.purchase_organization)">
+                                                <option value="">Select Purchase Organization</option>
+                                                <option *ngFor="let purchaseOrganization of purchaseOrganizationList" value={{purchaseOrganization.id}}>{{purchaseOrganization.name}} </option>
                                             </select>
-                                            <div class="invalid-feedback" *ngIf="isFieldValid('purchase_organization')">
+                                            <div class="invalid-feedback" *ngIf="form.controls['purchase_org'].hasError('required')">
                                                     Please select purchase organization
                                             </div>
                                         </div>
                                         <div class="form-group col-md-3">
                                             <label>Purchase Group</label>
-                                            <select class="form-control" name="purchase_group" formControlName="purchase_group" [ngClass]="displayFieldCss('purchase_group')">
+                                            <select class="form-control" formControlName="purchase_grp" [ngClass]="displayFieldCss('purchase_grp')">
                                                 <option value="">Select Group</option>
-                                                <option>Asset Purchase</option>
-                                                <option>Material Purchase</option>
-                                                <option>Purchase Group Name</option>
+                                                <option *ngFor="let purchaseGroup of purchaseGroupList;" value={{purchaseGroup.id}}>{{purchaseGroup.name}} </option>
                                             </select>
-                                            <div class="invalid-feedback" *ngIf="isFieldValid('purchase_group')">
+                                            <div class="invalid-feedback" *ngIf="isFieldValid('purchase_grp')">
                                                     Please select purchase group
                                             </div>
                                         </div>
                                         <div class="form-group col-md-3">
                                             <label>Company</label>
-                                            <select class="form-control" name="company" formControlName="company" [ngClass]="displayFieldCss('company')">
+                                            <select class="form-control" name="company" formControlName="company" [ngClass]="displayFieldCss('company')" [(ngModel)]="purchaseRequisition.company" name="company" (ngModelChange)="changeCompany(purchaseRequisition.company)">
                                                 <option value="">Select Company</option>
-                                                <option>Shyam Futuretech</option>
+                                                <option *ngFor="let purchaseOrganizationCompany of purchaseOrganizationCompanyList;" value={{purchaseOrganizationCompany.id}}>{{purchaseOrganizationCompany.company_name}} </option>
                                             </select>
                                             <div class="invalid-feedback" *ngIf="isFieldValid('company')">
                                                     Please select company
@@ -61,14 +59,13 @@
                                         <div class="form-group col-md-3">
                                             <label>PR Date</label>
                                             <div class="input-group">
-                                                <input class="form-control" placeholder="yyyy-mm-dd" name="date" formControlName="date" [ngClass]="displayFieldCss('date')"
-                                                    ngbDatepicker #d="ngbDatepicker">
+                                                <input class="form-control" placeholder="yyyy-mm-dd" name="created_at" formControlName="created_at" [ngClass]="displayFieldCss('created_at')"  ngbDatepicker #d="ngbDatepicker">
                                                 <div class="input-group-append">
                                                     <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
                                                         <i class="fa fa-calendar" aria-hidden="true"></i>
                                                     </button>
                                                 </div>
-                                                <div class="invalid-feedback" *ngIf="isFieldValid('date')">
+                                                <div class="invalid-feedback" *ngIf="isFieldValid('created_at')">
                                                         Please enter date
                                                 </div>
                                             </div>
@@ -76,93 +73,70 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card bg-light mb-3">
+                             <div class="card bg-light mb-3">
                                 <div class="card-header">Material Line</div>
                                 <div class="card-body">
-                                    <div class="row" formArrayName="items" *ngFor="let item of form.get('items').controls; let i = index;">
+                                    <div class="row" formArrayName="requisition_detail"  *ngFor="let requisition of form.controls['requisition_detail'].controls; let i = index;">
                                         <div [formGroupName]="i" class="col-md-12">
                                             <div class="row">
                                                 <div class="form-group col-md-2">
                                                     <label>Material</label>
                                                     <select class="form-control" name="material" formControlName="material">
                                                         <option value="">Select Material</option>
-                                                        <option>RM002 - Sand</option>
-                                                        <option>RM004 - TMT rebar</option>
-                                                        <option>SI007 - PLY</option>
-                                                        <option>FG008 - Stationary</option>
-                                                        <option>FG008 - Stationary</option>
+                                                        <option *ngFor="let purchaseOrganizationMaterial of purchaseOrganizationMaterialList;" value="{{purchaseOrganizationMaterial.id}}">{{purchaseOrganizationMaterial.material_fullname}}</option>
+                                                        
                                                     </select>
                                                 </div>
                                                 <div class="form-group col-md-1">
                                                     <label>Quantity</label>
                                                     <input class="form-control" placeholder="Quantity" name="quantity" formControlName="quantity">
                                                 </div>
-                                                <div class="form-group col-md-1">
+                                                <div class="form-group col-md-2">
                                                     <label>UOM</label>
-                                                    <select class="form-control">
-                                                        <option value="">Select UMO</option>
-                                                        <option>SQMT</option>
-                                                        <option>PCS</option>
-                                                        <option>CFT</option>
+                                                    <select class="form-control"  name="uom" formControlName="uom">
+                                                        <option value="0">Select UOM</option>
+                                                        <option *ngFor="let uom of UOMList;" value="{{uom.id}}">{{uom.name}}</option>
                                                     </select>
                                                 </div>
-                                                <div class="form-group col-md-1">
-                                                    <label>Plant</label>
-                                                    <select class="form-control">
-                                                        <option value="">Select Plant</option>
-                                                        <option>MATLA BDS BRIDGE</option>
+                                                <div class="form-group col-md-2">
+                                                    <label>Branch</label>
+                                                    <select class="form-control"  name="branch" formControlName="branch">
+                                                        <option value="">Select Branch</option>
+                                                       
+                                                        <option *ngFor="let companyBranch of companyBranchDropdownList;" value="{{companyBranch.id}}">{{companyBranch.branch_name}}</option>
                                                     </select>
                                                 </div>
                                                 <div class="form-group col-md-2">
                                                     <label>Storage</label>
-                                                    <select class="form-control">
+                                                    <select class="form-control"  name="storage_location" formControlName="storage_location">
                                                         <option>Select Storage</option>
-                                                        <option>Kolkata, kolkata, WEST BENGAL - 741258</option>
-                                                        <option>Kolkata, Kolkata, WEST BENGAL - 789852</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group col-md-1">
-                                                    <label>Bin</label>
-                                                    <select class="form-control">
-                                                        <option value="">Select Bin</option>
-                                                        <option>Bin 1</option>
-                                                        <option>Bin 2</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group col-md-1">
-                                                    <label>Vendor</label>
-                                                    <select class="form-control">
-                                                        <option value="">Select Vendor</option>
-                                                        <option>Shyam FT</option>
-                                                        <option>Demo Name</option>
-                                                        <option>Vendor Name</option>
+                                                        <option *ngFor="let companyStorage of companyStorageDropdownList;" value="{{companyStorage.id}}">{{companyStorage.storage_address}}</option>
                                                     </select>
                                                 </div>
                                                 <div class="form-group col-md-2">
-                                                    <label>Vendor Address</label>
-                                                    <select class="form-control">
-                                                        <option value="">Select Vendor Address</option>
-                                                        <option>kolkata, kolkata, WEST BENGAL- 700012, India</option>
-                                                        <option>kolkata, kolkata, WEST BENGAL- 700012, India</option>
+                                                    <label>Bin</label>
+                                                    <select class="form-control"  name="storage_bin" formControlName="storage_bin">
+                                                        <option value="">Select Bin</option>
+                                                        <option *ngFor="let companyStoragebin of companyStoragebinDropdownList;" value="{{companyStoragebin.id}}">{{companyStoragebin.bin_no}}</option>
                                                     </select>
                                                 </div>
+                                                
                                                 <div class="form-group col-md-1" style="padding-top:30px;">
-                                                    <a routerLink="." (click)="addItem()" title="Add More" name="Add More" *ngIf="i == 0">
+                                                    <a routerLink="." (click)="addRequisitionDetail()" title="Add More" name="Add More" *ngIf="i == 0">
                                                         <i class="fa fa-plus"></i> Add More</a>
-                                                    <a href="javascript:void(0);" title="Delete" name="Delete" *ngIf="i > 0">
-                                                        <i class="fa fa-times-circle fa-2"></i> Delete</a>
+                                                    <a href="javascript:void(0);" title="Delete" name="Delete" *ngIf="i > 0"  (click)="deleteRequisitionDetail(i)">
+                                                        <i class="fa fa-times-circle fa-2" ></i> Delete</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                             <div class="row">
                                 <div class="form-group col-md-12">
                                     <label>Special Note</label>
-                                    <textarea class="form-control" rows="3" placeholder="Special Note" name="note" formControlName="note" [ngClass]="displayFieldCss('note')"></textarea>
-                                    <div class="invalid-feedback" *ngIf="isFieldValid('note')">
+                                    <textarea class="form-control" rows="3" placeholder="Special Note" name="note" formControlName="special_note" [ngClass]="displayFieldCss('special_note')"></textarea>
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('special_note')">
                                             Please enter special note
                                     </div>
                                 </div>
